--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -3,21 +3,24 @@
     height: 100%;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap ;
     align-items: center;
 }
 .cardAdmin{
-    width: 23%;
-    height: 200px;
+    width: 220px;
+    height: 160px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     border-radius: 10px ;
+    background-color: var(--brancoescuro);
 }
 .infoCardAdmin{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 70%;
+    height: 65%;
     width: 100%;
     content: '';
     background-repeat: no-repeat;
@@ -34,6 +37,7 @@
 .linkContainerAdminOption{
     height: 30%;
     width: 100%;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -49,13 +53,16 @@
     transition: 80ms;
 }
 .colorGreen{
-    color:rgb(102, 224, 102);
+    color:rgb(9, 73, 9);
 }
 .colorGreen:hover{
     color:rgb(102, 224, 102);
 }
 .colorRed{
-    color: rgb(214, 85, 85);
+    color: rgb(146, 14, 14);
+}
+.blue{
+    color: rgb(18, 19, 18);
 }
 
 .infoCardAdmin:hover{
@@ -74,8 +81,129 @@
 #Faturamento{
     background-image: url('/img/iconeCoin.png');
 }
+#Funcionarios{
+    background-image: url('/img/iconeFuncionarios.png');
+}
 #tabela{
     height: 80vh;
     overflow: scroll;
     
+}
+.dashboardBlockLinha{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 0px 20px 0px;
+    
+}
+.infoDashboard{
+    width: 220px;
+    height: 80px;
+    background-color: var(--branco);
+    box-shadow: 2px 4px 10px rgb(190, 190, 190);
+    padding:10px;
+    border-radius: 3px;
+    transition: 100ms;
+    margin: 10px 0px 10px 0px;
+}
+.infoDashboard:hover{
+    box-shadow: 2px 4px 15px rgb(148, 146, 146);
+    width: calc(220px);
+    margin: 0px;
+    height: 100px;
+    border: none;
+    margin:  0px;
+}
+
+
+
+.infoDashboard2{
+    width: 220px;
+    height: 80px;
+    background-color: var(--branco);
+    box-shadow: 2px 4px 10px rgb(190, 190, 190);
+    padding:10px;
+    border-radius: 3px;
+    transition: 100ms;
+    margin: 10px 10px 10px 10px;
+}
+
+
+
+.infoDashboard2:hover{
+    box-shadow: 2px 4px 15px rgb(148, 146, 146);
+    width: 220px;
+    height: 100px;
+    border: none;
+    margin: 0px 10px 0px 10px;
+}
+
+
+.innerInfoDashboard{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-left: 4px solid var(--verdeescuro);
+}
+.infoDashboardValue{
+    color: var(--verdeclaro);
+    font-size: larger;
+}
+.infoDashboardTittle{
+    width: 100%;
+    text-align: center;
+    color: var(--verdeescuro);
+}
+.graficosContainer{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    
+    justify-content: space-around;
+    align-items: flex-start;
+    padding-top: 20px;
+}
+.containerGrafico{
+    
+    border-radius: 5px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    box-shadow: 2px 4px 15px rgb(148, 146, 146);
+    display: flex;
+    width: 46%;
+    height: fit-content;
+}
+.containerGraficoPie{
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 40px;
+    box-shadow: 2px 4px 15px rgb(148, 146, 146);
+    display: flex;
+    width: 46%;
+    height: fit-content;
+    
+}
+#tabelaDashboard{
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 32%;
+    box-shadow: 2px 4px 15px rgb(148, 146, 146);
+    padding: 5px;
+
+}
+#tabelaDashboard h4{
+    text-align: center;
+    overflow: hidden;
+    color: var(--verdeclaro);
+}
+#tabelaDashboard table{
+    color: var(--verdeescuro);
 }
