--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,6 @@
 header{
     display: flex;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--preto);
     height: 12vh;
     width: 100vw;
     color: white;
