--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,79 @@
 .ContainerComPaddingPadrao{
     width: 100%;
     height: 100%;
-    padding: 30px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
-.containerGrafico{
+
+#OptionsAdmin{
     display: flex;
-    width: 60%;
-    height: fit-content;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    width: 500px;
+    border: 1px solid red;
+    padding-top: 20px;
+
+}
+#AdminDashboard{
+    display: flex;
+    height: 70vh;
+    padding: 20px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.Month{
+    width: 200px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    transition: 200ms;
+    background-color: var(--verdeescuro);
+    margin: 30px 0px 30px 0px;
+}
+.Month:hover{
+    box-shadow: 0px 0px 30px #707174;
+    color: white;
+    font-size: 20px;
+    padding: 60px;
+    margin: 0px 0px 0px 0px;
+}
+#AdminDashboard h1{
+    width: 100%;
+}
+.limitaTable{
+    border: 1px solid red;
+    max-height: 800px ;
+}
+::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 4px;
+        
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--verdeescuro);
+    border-radius: 4px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--verdeclaro);
+  }
+.BCgreen{
+    background-color: var(--verdeescuro) ;
+}
+.Colorgreen{
+    color: var(--verdeescuro) ;
 }
