--- a/public/css/pedido.css
+++ b/public/css/pedido.css
@@ -94,7 +94,8 @@ span{
     align-items: center;
     justify-content: center;
     padding: 20px;
-    width: 100%;
+    width: 60%;
+    margin: 0 auto;
 }
 .campoFomr{
     margin: 0px 40px 20px 40px;
@@ -135,9 +136,24 @@ span{
     position: absolute;
     width: 250px;
     height: 120px;
-    margin: 0 auto;
+    top:1000px;
+    margin: 0 auto; 
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.459);
+    background-color: var(--branco);
+    backdrop-filter: blur(8px);
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgb(173, 173, 173);
+    opacity: 0;
+}
+.notificacao2{
+    display: block;
+    border:1px solid rgb(163, 163, 163);
+    position: absolute;
+    width: 250px;
+    height: 120px;
+    margin: 0 auto; 
+    border-radius: 5px;
+    background-color: var(--branco);
     backdrop-filter: blur(8px);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgb(173, 173, 173);
@@ -182,5 +198,44 @@ span{
 
 
 
-
+#editPedidoContainer{
+    margin: 0;
+    padding: 15px;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    background-color: var(--branco);
+    box-shadow: 0px 0px 20px rgb(107, 107, 107);
+}
+#infoPedido{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    list-style: none;
+    padding: 30px 30px 10px 30px;
+}
+#infoPedido a{
+    color: black;
+}
+#infoPedido a:hover{
+    color: black;
+}
+#infoPedido li{
+    margin: 5px 0px 5px 0px ;
+}
+#infoPedido h3{
+    margin: 10px 0px 10px 0px;
+    width: 100%;
+    text-align: center;
+    color: var(--verdeclaro);
+}
+#formStatus{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
