--- a/public/css/filter.css
+++ b/public/css/filter.css
@@ -15,3 +15,17 @@
 .filterInputCard label{
    margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 1060px) {
+    .formPedidos{
+        width: 100%;
+    }
+    .Container{
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .filter{
+        flex-direction: column;
+    }
+}
