--- a/public/css/form.css
+++ b/public/css/form.css
@@ -47,3 +47,9 @@ form label{
     border: 1px solid #ced4da;
     border-radius: 5px;
 }
+@media only screen and (max-width: 700px) {
+    .tabela{
+        width: 100%;
+        overflow-x: scroll;
+    }
+}
