--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,6 +7,11 @@ header{
     justify-content: space-around;
     font-size: 15px;    
 }
+#headerMenuShowBlock{
+    height: 12vh;
+    width: 100vw;
+    display: flex;
+}
 #imageLogo{
     width: 7%;
     height: 99%;
@@ -35,6 +40,7 @@ header{
 #centerHeader ul li{
     transition: 100ms;
     transition-timing-function: cubic-bezier(0.23, 1, 0.320, 1);
+    overflow: hidden;
 }
 #centerHeader ul li:hover{
     transform: scale(1.5);
@@ -47,6 +53,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 #seta {
@@ -60,6 +67,10 @@ header{
   }
 #seta:hover{
     margin-top: 10px;
+}
+#HamburguerMenu{
+    display: none;
+    visibility: none;
 }
 
 @media only screen and (max-width: 760px) {
@@ -78,5 +89,101 @@ header{
     }
     #imageLogo{
         display: none;
+    }
+    
+}
+@media only screen and (max-width: 1060px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        overflow: hidden;
+        padding: 0;
+        height: fit-content;
+    }
+    
+    #HamburguerMenu{
+        display: flex;
+        height: fit-content;
+        overflow: hidden;
+        margin: 10px 0px;
+    }
+    #IconeMenu{
+        width: 50px;
+        height: 50px;
+        overflow: hidden;
+    }
+    #centerHeader a{
+        font-size: 15px;
+        overflow:hidden;
+    }
+    #seta{
+        display: none;
+    }
+    #centerHeader{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #profileArea{
+        width: 100%;
+        height: fit-content;
+        overflow: hidden;
+    }
+    #centerHeader ul{
+        overflow:hidden;
+        /* display: flex; */
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        margin: 0px;
+        margin-bottom: 5px;
+    }
+    #centerHeader li{
+        margin: 5px 0px;
+    }
+    #imageLogo{
+        display: none;
+    }
+    #headerMenuShowBlock{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .menuShow{
+        height: 0;
+        animation: showMenu 300ms cubic-bezier(0.175, 0.885, 0.32, 1.10) forwards;
+    }
+    .menuHidden{
+        height: 240px;
+        animation: hideMenu 300ms cubic-bezier(0.175, 0.885, 0.32, 1.10) forwards;
+    }
+    @keyframes showMenu {
+        from{
+            height: 0px;
+        }
+        to{
+            height: 240px;
+        }
+    }
+    @keyframes hideMenu {
+        from{
+            height: 240px;
+        }
+        to{
+            height: 0px;
+        }
+    }
+
+
+
+
+    /*DashBoard*/
+    #dashboardMain{
+
     }
 }
