--- a/public/css/pedido.css
+++ b/public/css/pedido.css
@@ -238,4 +238,8 @@ span{
     flex-direction: column;
     align-items: center;
 }
-
+@media only screen and (max-width: 1010px) {
+    #Campode_formularios{
+        flex-direction: column;
+    }
+}
