--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -319,6 +319,16 @@
 .colorRed{
     color: red;
 }
+#pratoDoDia2 ul{
+    margin-left: 0px;
+    padding-left: 0;
+}
+@media only screen and (max-width: 1560px) {
+    #form{
+        width: 100%;
+    }
+}
+
 
 @media only screen and (max-width: 1060px) {
     #DashboardMain{
@@ -335,12 +345,14 @@
         height: fit-content;
         justify-content: center;
     }
+    
     #pedidos{
         overflow-x:scroll;
     }
     .divOptionContainer{
         overflow-x: scroll;
     }
+    
 
     .divCustom{
         flex-direction: column;
@@ -356,10 +368,17 @@
     
 }
 @media only screen and (max-width: 700px) {
-    .inputCustom{
+    .inputCustom{ 
         width: 95%;
     }
     .FormPedido label{
         width: 100%;
+    }
+    #pratoDoDia2{
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
