--- a/public/css/form.css
+++ b/public/css/form.css
@@ -50,6 +50,6 @@ form label{
 @media only screen and (max-width: 700px) {
     .tabela{
         width: 100%;
-        overflow-x: scroll;
+        overflow: scroll;
     }
 }
